--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <div id="country"></div>
   <div id="gender"></div>
 
+  <hr>
+
+  <div id="astro-photo">Loading...</div>
+
   <script src="./scripts.js"></script>
 </body>
 </html>
